--- a/client/src/my/sheeponthetable/gui/SheepPanel.form
+++ b/client/src/my/sheeponthetable/gui/SheepPanel.form
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.1" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
@@ -229,7 +229,7 @@
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jXSheepMap" pref="428" max="32767" attributes="0"/>
+                  <Component id="jXSheepMap" pref="407" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -239,7 +239,7 @@
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="jXSheepMap" alignment="0" max="32767" attributes="0"/>
+                      <Component id="jXSheepMap" alignment="0" pref="915" max="32767" attributes="0"/>
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="lblFarmName" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -272,7 +272,7 @@
                                   <Component id="jScrollPane2" pref="0" max="32767" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
-                                  <Component id="jScrollPane1" max="32767" attributes="0"/>
+                                  <Component id="jScrollPane1" pref="845" max="32767" attributes="0"/>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
                                       <Component id="jButton3" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -356,7 +356,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jScrollPane3" max="32767" attributes="0"/>
+                          <Component id="jScrollPane3" pref="299" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="jLabel7" alignment="0" max="32767" attributes="0"/>
@@ -384,10 +384,10 @@
                                           <Component id="lblSheepPulse" alignment="0" min="-2" max="-2" attributes="0"/>
                                           <Component id="lblSheepAlarm" alignment="0" min="-2" max="-2" attributes="0"/>
                                       </Group>
-                                      <EmptySpace min="0" pref="84" max="32767" attributes="0"/>
+                                      <EmptySpace min="0" pref="32" max="32767" attributes="0"/>
                                   </Group>
-                                  <Component id="lblSheepPosition" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="lblSheepUpdate" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="lblSheepPosition" alignment="0" pref="173" max="32767" attributes="0"/>
+                                  <Component id="lblSheepUpdate" alignment="0" pref="173" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -677,10 +677,10 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="btnSheepEditSave" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace pref="93" max="32767" attributes="0"/>
+                              <EmptySpace pref="61" max="32767" attributes="0"/>
                               <Component id="btnSheepEditCancel" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="jScrollPane4" max="32767" attributes="0"/>
+                          <Component id="jScrollPane4" pref="299" max="32767" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="1" max="-2" attributes="0">
                                   <Component id="jLabel25" pref="120" max="32767" attributes="0"/>
@@ -692,11 +692,11 @@
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="dcSheepEditBorn" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="txtSheepEditWeight" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="txtSheepEditNickname" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="txtSheepEditId" max="32767" attributes="0"/>
-                                  <Component id="dcSheepEditDead" max="32767" attributes="0"/>
+                                  <Component id="dcSheepEditBorn" alignment="0" pref="167" max="32767" attributes="0"/>
+                                  <Component id="txtSheepEditWeight" alignment="0" pref="167" max="32767" attributes="0"/>
+                                  <Component id="txtSheepEditNickname" alignment="0" pref="167" max="32767" attributes="0"/>
+                                  <Component id="txtSheepEditId" pref="167" max="32767" attributes="0"/>
+                                  <Component id="dcSheepEditDead" pref="167" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -741,7 +741,7 @@
                           <Component id="btnSheepEditSave" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnSheepEditCancel" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="86" max="32767" attributes="0"/>
+                      <EmptySpace pref="43" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
