--- a/client/src/my/sheeponthetable/gui/PasswordScreen.form
+++ b/client/src/my/sheeponthetable/gui/PasswordScreen.form
@@ -27,8 +27,8 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <Component id="loginPanel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
+              <Component id="loginPanel" min="-2" pref="555" max="-2" attributes="0"/>
+              <EmptySpace min="7" pref="7" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -172,7 +172,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="welcomeLabel">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Welcome to Sheep Finder Alpha, please log in to manage your sheeps."/>
+            <Property name="text" type="java.lang.String" value="Welcome to Sheep Finder Alpha, please log in to manage your sheep."/>
           </Properties>
         </Component>
       </SubComponents>
