--- a/client/src/my/sheeponthetable/gui/PasswordScreen.form
+++ b/client/src/my/sheeponthetable/gui/PasswordScreen.form
@@ -27,7 +27,7 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <Component id="loginPanel" min="-2" pref="555" max="-2" attributes="0"/>
+              <Component id="loginPanel" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="7" pref="7" max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -45,6 +45,9 @@
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="keyPressedEvent"/>
+      </Events>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -109,14 +112,8 @@
       </Layout>
       <SubComponents>
         <Component class="javax.swing.JTextField" name="usernameField">
-          <Events>
-            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="onEnterLogon"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JPasswordField" name="passwordField">
-          <Events>
-            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="onEnterLogon"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="titleLabel">
           <Properties>
@@ -143,9 +140,6 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Remember me"/>
           </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rememberMeCheckboxActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="sheepImageLabel">
           <Properties>
